@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="gb2312"?>
 <VisualStudioProject
 	ProjectType="Intel C++ Project"
-	Version="12.0"
+	Version="12.1"
 	Name="regression"
 	ProjectGUID="{4F7357A2-8EB3-4A6D-A07A-6E806FB239FA}"
 	VCNestedProjectGUID="{74ADA9F7-1B6D-49AF-B9A0-AA39538F86BD}"
