@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="gb2312"?>
 <VisualStudioProject
 	ProjectType="Intel C++ Project"
-	Version="12.0"
+	Version="12.1"
 	Name="test"
 	ProjectGUID="{13DBE460-40BE-44D5-B47C-43CE89850E4A}"
 	VCNestedProjectGUID="{98175DEE-7B51-47CA-9BF1-36FE840420AD}"
